deployment-2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 2048-application
  name: 2048-deployment
spec:
  selector:
    matchLabels:
      appname: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        appname: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
