service-2048.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    appname: app-2048
