ingress-2048.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: 2048-application
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account id>:certificate/90fd4cd6-b0a2-4f1a-8ccc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: <your host name>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 2048-service
                port:
                  number: 80
